task5/tests/group/output/test15.out
lli: <stdin>:52:11: error: '@printi' defined with type 'void (i32)*' but expected 'void (i8)*'
call void @printi(i8 %t15)
          ^
